Atom - Comment color style: added Stack Overflow link

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -36,3 +36,4 @@ atom-text-editor .syntax--comment {
          /* color: #ffffaa; */
          color: #df9b7e;
 }
+    // https://stackoverflow.com/a/42663724/2450748
